welcome.lessons.welcome.bat.bool1.Makes10.scala.error
makes10:2: error: ')' expected but '=' found.
	((a || b) = 10) && ((a + b) = 10)
                  ^makes10:2: error: ';' expected but '=' found.
	((a || b) = 10) && ((a + b) = 10)
                                    ^